objects/CFConnector__c.object
<CustomObject>
    <fields>
        <fullName>Connector_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the name of the connector who is contact in CF Account(CF BCBS) Account</description>
        <inlineHelpText>User can view only the contacts from CF BCBS Account</inlineHelpText>
        <label>Connector Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>equals</operation>
                <value>CareFirst BlueCross BlueShield</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CFConnector (ConnectorName)</relationshipLabel>
        <relationshipName>CFConnector2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Connector_Role__c</fullName>
        <description>This gives the information about the role played by the connector</description>
        <label>Connector Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Manager/Director</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intermediary_CompanyType__c</fullName>
        <description>This gives the information about the type of Intermediary Company</description>
        <label>Intermediary Company Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Audit, tax &amp; consulting firm</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Chambers of commerce</fullName>
                </value>
                <value>
                    <fullName>Charitable organization</fullName>
                </value>
                <value>
                    <fullName>Community organization</fullName>
                </value>
                <value>
                    <fullName>Community outreach</fullName>
                </value>
                <value>
                    <fullName>Consulting house</fullName>
                </value>
                <value>
                    <fullName>Economic development</fullName>
                </value>
                <value>
                    <fullName>Engineering firm</fullName>
                </value>
                <value>
                    <fullName>FSP/GP</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Investment management firm</fullName>
                </value>
                <value>
                    <fullName>IT professionals</fullName>
                </value>
                <value>
                    <fullName>Law firm</fullName>
                </value>
                <value>
                    <fullName>Lobbyists</fullName>
                </value>
                <value>
                    <fullName>Office technology firm</fullName>
                </value>
                <value>
                    <fullName>Philanthropic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intermediary_Company__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Intermediary Company</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intermediay_CompanyContact__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Intermediay Company Contact</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This allows the users to select the Opportunity for the particular Target Account he is related with and mainly used for reporting purpose</description>
        <label>Opportunity</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Opportunity.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Target_Company__c</valueField>
            </filterItems>
            <filterItems>
                <field>Opportunity.Effective_Date__c</field>
                <operation>greaterThan</operation>
                <value>1/1/2014</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>CFConnector</relationshipLabel>
        <relationshipName>CFConnector_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Account_Type__c</fullName>
        <description>This field will help to know type of the company and it get the value populated from the Account Object</description>
        <formula>TEXT( Target_Company__r.Type )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Company_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This allows the connector to select the Contact for the particular Target Company whom he is associated</description>
        <inlineHelpText>User Can View Contacts of selected Target Company only</inlineHelpText>
        <label>Target Company Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Target_Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CFConnector</relationshipLabel>
        <relationshipName>CFConnector</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This allows the Connector to select the Target Company he is associated</description>
        <inlineHelpText>User can view only 51+ Accounts</inlineHelpText>
        <label>Target Company</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>contains</operation>
                <value>51</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CFConnector</relationshipLabel>
        <relationshipName>CFConnector</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Top_Account__c</fullName>
        <description>This field value is populated from the Account Object  for the particular Record</description>
        <formula>TEXT( Target_Company__r.Top_Account__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Top Account</label>
        <type>Text</type>
    </fields>
    <label>CFConnector</label>
    <nameField>
        <displayFormat>CFC-{00000}</displayFormat>
        <label>Connector Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CFConnector</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Target_Company__c</columns>
        <columns>Target_Company_Contact__c</columns>
        <columns>Connector_Role__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>